[gd_scene load_steps=6 format=3 uid="uid://bhrxxgro2ughb"]

[ext_resource type="Script" uid="uid://d3rmyef51n10d" path="res://Scripts/BattleScene.gd" id="1_scene"]
[ext_resource type="Script" uid="uid://coujgg4n6jxxm" path="res://Scripts/BattleManager.gd" id="2_battle"]
[ext_resource type="PackedScene" uid="uid://de88vp3r8xhe1" path="res://Scenes/character_2d.tscn" id="3_u810s"]
[ext_resource type="Resource" uid="uid://cac5iv68wxobd" path="res://Resources/Characters/madoka.tres" id="5_u810s"]
[ext_resource type="Resource" uid="uid://cte5nbkojbj45" path="res://Resources/Enemies/zombie.tres" id="7_8uoga"]

[node name="root" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_scene")

[node name="BattleManager" type="Node" parent="."]
script = ExtResource("2_battle")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(-1.9999962, 2)
scale = Vector2(1.0957031, 1.0492682)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1, 0)
offset = Vector2(0, 100)
zoom = Vector2(1.03, 1.03)

[node name="Players" type="Node" parent="."]

[node name="MainControl" parent="Players" instance=ExtResource("3_u810s")]
position = Vector2(-250, 250)
stats = ExtResource("5_u810s")

[node name="Enemies" type="Node" parent="."]

[node name="Enemy" parent="Enemies" instance=ExtResource("3_u810s")]
position = Vector2(250, 250)
scale = Vector2(-1, 1)
stats = ExtResource("7_8uoga")

[node name="UI" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="UI"]
layout_mode = 2
text = "BattleScene"
horizontal_alignment = 1

[node name="TurnLabel" type="Label" parent="UI"]
layout_mode = 2
text = "当前回合：玩家"
horizontal_alignment = 1

[node name="PlayerInfo" type="Label" parent="UI"]
layout_mode = 2
text = "玩家：血量 100/100"
horizontal_alignment = 1

[node name="EnemyInfo" type="Label" parent="UI"]
layout_mode = 2
text = "敌人：血量 80/80"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="UI"]
layout_mode = 2

[node name="AttackButton" type="Button" parent="UI"]
layout_mode = 2
text = "攻击"

[node name="StatusLabel" type="Label" parent="UI"]
layout_mode = 2
horizontal_alignment = 1

[connection signal="battle_ended" from="BattleManager" to="." method="_on_battle_ended"]
[connection signal="turn_changed" from="BattleManager" to="." method="_on_turn_changed"]
[connection signal="pressed" from="UI/AttackButton" to="." method="_on_attack_button_pressed"]
